Dec 09. DOI Badge Zenodo.

--- a/README.html
+++ b/README.html
@@ -352,18 +352,18 @@ display: none;
 </div>
 
 
-<div id="synthetic-lures-attract-shorttailed-bats-carollia-phyllostomidae-and-increase-seed-rain-in-a-neotropical-forest" class="section level1">
-<h1>Synthetic lures attract short‐tailed bats (<em>Carollia</em>:
-Phyllostomidae) and increase seed rain in a Neotropical forest</h1>
+<div id="testing-the-effectiveness-of-synthetic-chemical-lures-to-increase-fruit-bat-mediated-seed-dispersal-in-a-tropical-forest" class="section level1">
+<h1>Testing the effectiveness of synthetic chemical lures to increase
+fruit bat-mediated seed dispersal in a tropical forest</h1>
 <p>This repository contains scripts, information, and figures related to
 the statistical analyses conducted for the research paper titled
-“Synthetic lures attract short‐tailed bats (<em>Carollia</em>:
-Phyllostomidae) and increase seed rain in a Neotropical forest.” Our
-research explores the effectiveness of synthetic chemical lures as a
-novel strategy to attract fruit bats and enhance seed rain in a lowland
-rainforest in northeastern Costa Rica (La Selva Biological Station). We
-investigated the impact of chemical lures on increasing bat activity and
-seed rain. All the analyses were performed in R v. 4.2.1.</p>
+“Testing the effectiveness of synthetic chemical lures to increase fruit
+bat-mediated seed dispersal in a tropical forest.” Our research explores
+the effectiveness of synthetic chemical lures as a novel strategy to
+attract fruit bats and enhance seed rain in a lowland rainforest in
+northeastern Costa Rica (La Selva Biological Station). We investigated
+the impact of chemical lures on increasing bat activity and seed rain.
+All the analyses were performed in R v. 4.2.1.</p>
 <div id="scripts" class="section level2">
 <h2>Scripts</h2>
 <div id="objective-1-assess-the-effectiveness-of-the-chemical-lure-to-increase-bat-activity-in-open-and-semi-open-areas-script1.r-and-script2.r" class="section level3">
